fix: restore desktop header layout, rely on global overflow-x guard

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,5 @@
 .header {
   width: 100vw;
-  max-width: 100%;
-  overflow-x: hidden;
   border-bottom-left-radius: 40px;
   border-bottom-right-radius: 40px;
   background-color: #f7f0e9;
